Add build functions

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run lambda:build",
+    "lambda:build": "netlify-lambda build functions/src",
+    "Lambda:serve": "netlify-lambda serve functions/dist"
   },
   "repository": {
     "type": "git",
